--- a/package.json
+++ b/package.json
@@ -2,16 +2,29 @@
   "name": "kanban-board-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "get-schema": "graphql get-schema"
+  },
+  "dependencies": {
+    "apollo-boost": "^0.1.22",
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-error": "^1.1.5",
+    "flow-typed": "^2.5.1",
+    "graphql": "^14.0.2",
+    "react": "^16.6.3",
+    "react-apollo": "^2.3.3",
+    "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.89.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -19,7 +32,6 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
     "not op_mini all"
   ]
 }
