--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-trello": "^2.0.7",
     "styled-components": "^4.1.3",
     "yup": "^0.26.6"
   },
