--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "graphql": "^14.0.2",
     "jwt-decode": "^2.2.0",
     "ramda": "^0.26.1",
-    "react": "^16.6.3",
+    "react": "^16.7.0-alpha.2",
     "react-apollo": "^2.3.3",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
