--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
     "jwt-decode": "^2.2.0",
+    "loaders.css": "^0.1.2",
     "ramda": "^0.26.1",
     "react": "^16.7.0-alpha.2",
     "react-apollo": "^2.3.3",
+    "react-color": "^2.17.0",
     "react-dom": "^16.7.0-alpha.2",
+    "react-loaders": "^3.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
